# search-substring

./: CMakeLists.txt  README.md
cpp/: CMakeLists.txt
cpp/include/: substring_search
cpp/include/algos/: Brute-Force.hpp  Finite-Automata.hpp  Karp-Rabin.hpp  Knuth-Morris-Pratt.hpp
cpp/src/: Brute-Force.cpp  Finite-Automata.cpp  Karp-Rabin.cpp  Knuth-Morris-Pratt.cpp
include/: Aho-Corasick.h  Brute-Force.h  Finite-Automata.h  Karp-Rabin.h  Knuth-Morris-Pratt.h
python/: main.py  statistic.csv  statistic_no_naive.csv
python/algorithms/: __init__.py  karp_rabin.py  knutt_morris_pratt.py  naive.py
python/unit_tests/: tests.py
python_lib/: substring_search.cpp
src/: Aho-Corasick.cpp  Brute-Force.cpp  Finite-Automata.cpp  Karp-Rabin.cpp  Knuth-Morris-Pratt.cpp  main1.cpp  main2.cpp  main3.cpp  main4.cpp
test/: tests.cpp
